src/styles/SearchBox.module.css
.search_box {
  max-width: 95%;
  margin: 0 auto;
  padding: 2.3vh 2vh;
  box-shadow: 0 0 7px var(--grey60);
  border-radius: 10px;
  position: relative;
}

.category_ingredient {
  transition: max-height 0.6s ease-in-out;
  max-height: 0;
  overflow: hidden;
}

.category_ingredient.open {
  max-height: 1000px; /* 충분히 큰 값으로 설정하여 내용이 모두 보이도록 함 */
}

.search_window {
  position: relative;
}

.search_input {
  display: block;
  box-sizing: border-box;
  width: 90%;
  padding: 5px 42px 5px 10px;
  margin: auto;
  border: 0;
  border-bottom: 2px solid var(--grey60);
  font-size: 12px;
  font-weight: 500;
}

.search_input::placeholder {
  color: var(--grey60);
}

.search_input:focus {
  outline: none;
}

.magnifier {
  position: absolute;
  top: 0;
  right: 22px;
  border: 0;
  background: transparent;
}
.category_button_list {
  padding-top: 20px;
  padding-bottom: 10px;
  text-align: center;
}

.category_button {
  display: inline-block;
  width: fit-content;
  padding: 3px 10px;
  margin: 0 5px;
  border-radius: 12px;
  font-weight: 500;
  font-size: 13px;
  background-color: transparent;
}

.category_button.selected {
  background-color: var(--main_button);
  color: white;
}

/* main.module.css */
.ingredient_list_container {
  height: 35vh;
  overflow-y: auto;
}
.ingredient_list {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
  grid-gap: 20px;
  place-items: center;
  cursor: default;
}

